add masked details