@@ -1,7 +1,10 @@
 package uk.gov.hmcts.reform.sscs.tyanotifications.controller;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static uk.gov.hmcts.reform.sscs.util.SscsUtil.getMaskedEmail;
+import static uk.gov.hmcts.reform.sscs.util.SscsUtil.getMaskedPhoneOrString;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.List;
@@ -10,6 +13,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import uk.gov.hmcts.reform.sscs.config.SpringConfig;
 import uk.gov.hmcts.reform.sscs.controller.ServiceHearingsController;
 import uk.gov.hmcts.reform.sscs.model.service.hearingvalues.PartyDetails;
 import uk.gov.hmcts.reform.sscs.model.service.hearingvalues.ServiceHearingValues;
@@ -22,6 +26,8 @@ public class ServiceHearingsControllerTest {
     @MockitoBean
     public ServiceHearingsService serviceHearingsService;
 
+    private ObjectMapper objectMapper = SpringConfig.mapper();
+
     @DisplayName("getServiceHearingValuesForLogging should handle null parties")
     @Test
     void testGetServiceHearingValuesForLoggingWithNullParties() throws Exception {
@@ -31,7 +37,7 @@ public class ServiceHearingsControllerTest {
 
         Method method = ServiceHearingsController.class.getDeclaredMethod("getServiceHearingValuesForLogging", ServiceHearingValues.class);
         method.setAccessible(true);
-        String result = (String) method.invoke(new ServiceHearingsController(serviceHearingsService), serviceHearingValues);
+        String result = (String) method.invoke(new ServiceHearingsController(serviceHearingsService, objectMapper), serviceHearingValues);
 
         assertThat(result).isNotNull();
         assertThat(result).contains("parties=null");
@@ -46,7 +52,7 @@ public class ServiceHearingsControllerTest {
 
         Method method = ServiceHearingsController.class.getDeclaredMethod("getServiceHearingValuesForLogging", ServiceHearingValues.class);
         method.setAccessible(true);
-        String result = (String) method.invoke(new ServiceHearingsController(serviceHearingsService), serviceHearingValues);
+        String result = (String) method.invoke(new ServiceHearingsController(serviceHearingsService, objectMapper), serviceHearingValues);
 
         assertThat(result).isNotNull();
         assertThat(result).contains("parties=[]");
@@ -57,13 +63,13 @@ public class ServiceHearingsControllerTest {
     @Test
     void testGetServiceHearingValuesForLoggingMasksMultipleParties() throws Exception {
         IndividualDetails individualDetails1 = IndividualDetails.builder()
-                .firstName("John")
-                .lastName("Doe")
-                .hearingChannelEmail(List.of("john.doe@example.com"))
+                .firstName("Paddington")
+                .lastName("Bear")
+                .hearingChannelEmail(List.of("paddington.bear@example.com"))
                 .hearingChannelPhone(List.of("07123456789"))
                 .build();
         PartyDetails partyDetails1 = PartyDetails.builder()
-                .partyName("John Doe")
+                .partyName("Paddington Bear")
                 .individualDetails(individualDetails1)
                 .build();
 
@@ -91,20 +97,31 @@ public class ServiceHearingsControllerTest {
 
         Method method = ServiceHearingsController.class.getDeclaredMethod("getServiceHearingValuesForLogging", ServiceHearingValues.class);
         method.setAccessible(true);
-        String result = (String) method.invoke(new ServiceHearingsController(serviceHearingsService), serviceHearingValues);
+        String result = (String) method.invoke(new ServiceHearingsController(serviceHearingsService, objectMapper), serviceHearingValues);
 
         assertThat(result).isNotNull();
-        assertThat(result).doesNotContain("John");
-        assertThat(result).doesNotContain("Doe");
-        assertThat(result).doesNotContain("john.doe@example.com");
+        assertThat(result).doesNotContain("Paddington");
+        assertThat(result).contains(getMaskedPhoneOrString("Paddington"));
+        assertThat(result).doesNotContain("Paddington Bear");
+        assertThat(result).contains(getMaskedPhoneOrString("Paddington Bear"));
+        assertThat(result).doesNotContain("paddington.bear@example.com");
+        assertThat(result).contains(getMaskedEmail("paddington.bear@example.com"));
         assertThat(result).doesNotContain("07123456789");
+        assertThat(result.contains(getMaskedPhoneOrString("07123456789")));
         assertThat(result).doesNotContain("Jane");
-        assertThat(result).doesNotContain("Smith");
+        assertThat(result).contains(getMaskedPhoneOrString("Jane"));
+        assertThat(result).doesNotContain("Jane Smith");
+        assertThat(result).contains(getMaskedPhoneOrString("Jane Smith"));
         assertThat(result).doesNotContain("jane.smith@example.com");
+        assertThat(result).contains(getMaskedEmail("jane.smith@example.com"));
         assertThat(result).doesNotContain("07987654321");
+        assertThat(result).contains(getMaskedPhoneOrString("07987654321"));
         assertThat(result).doesNotContain("hmctsInternalCaseNameTest");
+        assertThat(result).contains(getMaskedPhoneOrString("hmctsInternalCaseNameTest"));
         assertThat(result).doesNotContain("publicCaseNameTest");
+        assertThat(result).contains(getMaskedPhoneOrString("publicCaseNameTest"));
         assertThat(result).doesNotContain("listingCommentsTest");
+        assertThat(result).contains(getMaskedPhoneOrString("listingCommentsTest"));
     }
 
     @DisplayName("getServiceHearingValuesForLogging should not set the original serviceHearingValues parties to null")
@@ -132,7 +149,7 @@ public class ServiceHearingsControllerTest {
 
         Method method = ServiceHearingsController.class.getDeclaredMethod("getServiceHearingValuesForLogging", ServiceHearingValues.class);
         method.setAccessible(true);
-        ServiceHearingsController controller = new ServiceHearingsController(serviceHearingsService);
+        ServiceHearingsController controller = new ServiceHearingsController(serviceHearingsService, objectMapper);
 
         String result = (String) method.invoke(controller, serviceHearingValues);
 
@@ -145,9 +162,9 @@ public class ServiceHearingsControllerTest {
         assertThat(serviceHearingValues.getHmctsInternalCaseName()).isEqualTo("hmctsInternalCaseNameTest");
         assertThat(serviceHearingValues.getPublicCaseName()).isEqualTo("publicCaseNameTest");
         assertThat(serviceHearingValues.getListingComments()).isEqualTo("listingCommentsTest");
-        assertThat(serviceHearingValues.getParties().get(0).getPartyName()).isEqualTo("Paddington Bear");
-        assertThat(serviceHearingValues.getParties().get(0).getIndividualDetails().getFirstName()).isEqualTo("Paddington");
-        assertThat(serviceHearingValues.getParties().get(0).getIndividualDetails().getLastName()).isEqualTo("Bear");
+        assertThat(serviceHearingValues.getParties().getFirst().getPartyName()).isEqualTo("Paddington Bear");
+        assertThat(serviceHearingValues.getParties().getFirst().getIndividualDetails().getFirstName()).isEqualTo("Paddington");
+        assertThat(serviceHearingValues.getParties().getFirst().getIndividualDetails().getLastName()).isEqualTo("Bear");
     }
 
 }
